# fuxi-kubernetes

./: .gitignore  .gitreview  .testr.conf  README.md  requirements.txt  setup.cfg  tox.ini
fuxi_kubernetes/: __init__.py  clients.py  config.py  constants.py  exceptions.py  fuxi_client.py  k8s_client.py  opts.py  watcher.py
fuxi_kubernetes/cmd/: fuxi.py
fuxi_kubernetes/cmd/eventlet/: controller.py
fuxi_kubernetes/controller/: service.py
fuxi_kubernetes/controller/handlers/: pipeline.py  pod_volume.py  pvc.py
fuxi_kubernetes/flexvolume/: api.py  handlers.py  main.py
fuxi_kubernetes/handlers/: asynchronous.py  dispatch.py  k8s_base.py  logging.py  retry.py
fuxi_kubernetes/tests/: base.py
fuxi_kubernetes/tests/unit/: fuxi_fixtures.py  test_clients.py  test_fuxi_client.py  test_k8s_client.py  test_watcher.py
fuxi_kubernetes/tests/unit/cmd/eventlet/: test_controller.py
fuxi_kubernetes/tests/unit/controller/: test_service.py
fuxi_kubernetes/tests/unit/controller/handlers/: test_pipeline.py  test_pvc.py
fuxi_kubernetes/tests/unit/handlers/: test_asynchronous.py  test_dispatch.py  test_k8s_base.py  test_logging.py  test_retry.py
scripts/: fuxi  run_server.py
